2002-11-26  David Hyatt  <hyatt@apple.com>

	Fix the font family stuff to be refcounted, so copying
	fonts stays cheap.  Re-enabling it.

	Patch the render_arena code with some debugging info
	to help detect when memory gets trashed.

	Fix the background painting code to deal with negative
	x and y bakcground positions.  Fixes the brain on
	brainjar.com.
	
        * khtml/css/cssstyleselector.cpp:
        * khtml/rendering/render_arena.cpp:
        (RenderArena::free):
        * khtml/rendering/render_box.cpp:
        (RenderBox::paintBackground):
        * kwq/KWQFont.h:
        * kwq/KWQFont.mm:
        (QFontFamily::QFontFamily):
        (QFontFamily::operator=):

=== Alexander-34 ===

2002-11-26  David Hyatt  <hyatt@apple.com>

	Backing out support for multiple font families for now.
	The support is still there in QFont.  I've just stopped
	the style selector from walking the entire value list (it
	will only put the first family into the font).

	The original change  caused a 5% perf regression.  
	I'm going to see what kinds of tricks I can pull to get 
	some of this back before re-enabling the feature.
	
        * khtml/css/cssstyleselector.cpp:

2002-11-26  David Hyatt  <hyatt@apple.com>

	Fix render object removal to remerge adjacent anonymous inline boxes
	when an intervening block box gets removed.
	
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::removeChild):
        * khtml/rendering/render_flow.h:

2002-11-25  Richard Williamson   <rjw@apple.com>

        Cleanup up leaking objects in page cache.
        
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::openURLFromPageCache):
        * kwq/WebCoreBridge.mm:
        (-[KWQPageState initWithDocument:DOM::URL:windowProperties:KJS::locationProperties:KJS::]):
        (-[KWQPageState dealloc]):

2002-11-25  Richard Williamson   <rjw@apple.com>

        Added check for non-nil doc.
        
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::setView):
